Javascripts password generator

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Password Generator</title>
+    <title>p4sswdg3n</title>
 </head>
 <body>
 
-    <h1>Welcome to my Password Generator</h1>
-
-    <script src="js/script.js"></script>
+    <h1>Welcome to my Password Generator</h1><br>
+    <div class="container" >
+        <h2><span>Generate</span></h2>
+        <div class="display">
+            <input type="text" id="password" placeholder="Password">
+        </div>
+    </div>
+    
+        <script src="js/script.js"></script>
 
 </body>
 </html>
